--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="error_field_required">This field is required</string>
     <string name="action_test">Test</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="prompt_rule">Rulename</string>
+    <string name="prompt_condition">Condition</string>
 </resources>
